@@ -7,6 +7,17 @@
 	* man/cerebro.3: Removed file.
 
 	* man/Makefile.am: Update for new manpage.
+
+	* src/libs/util/config_util.c (_cb_cerebrod_alternate_hostname):
+	Fix corner case.
+
+	* src/libs/include/cerebro/cerebro_config.h,
+	src/libs/util/config_util.c (_cb_cerebrod_forward_message_config):
+	Accept longer strings for potential comma or hostrange inputs.
+
+	* src/libs/include/cerebro/cerebro_config.h,
+	src/libs/util/config_util.c: Begin support of
+	'cerebrod_forward_host_accept' config option.
 	
 2007-10-18  Albert Chu  <chu11@llnl.gov>
 
